exports[`info get node fields 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "name": "field1",
      },
    ],
    "name": "model1",
  },
]
`;

exports[`info get query connection fields simple 1`] = `
Array [
  Object {
    "fields": Array [],
    "name": "name",
  },
]
`;

exports[`info get query connection fields with fragments 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [
          Object {
            "fields": Array [
              Object {
                "fields": Array [],
                "name": "hasNextPage",
                "type": "Boolean",
              },
            ],
            "name": "pageInfo",
            "type": "Model1ConnectionPageInfo",
          },
          Object {
            "fields": Array [
              Object {
                "fields": Array [
                  Object {
                    "fields": Array [],
                    "name": "field1",
                    "type": "String",
                  },
                  Object {
                    "fields": Array [
                      Object {
                        "fields": Array [],
                        "name": "field2",
                        "type": "Int",
                      },
                    ],
                    "name": "model2",
                    "type": "Model2",
                  },
                ],
                "name": "node",
                "type": "Model1",
              },
            ],
            "name": "edges",
            "type": "[Model1ConnectionEdge]!",
          },
        ],
        "name": "model1",
        "type": "Model1Connection",
      },
    ],
    "name": "viewer",
    "type": "Viewer",
  },
]
`;

exports[`info get query connection fields with fragments 2`] = `
Array [
  Object {
    "fields": Array [],
    "name": "field1",
    "type": "String",
  },
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "name": "field2",
        "type": "Int",
      },
    ],
    "name": "model2",
    "type": "Model2",
  },
]
`;

exports[`info get query one fields 1`] = `
Array [
  Object {
    "fields": Array [],
    "name": "field1",
  },
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "name": "field2",
      },
    ],
    "name": "model2",
  },
]
`;

exports[`info parse all fields 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [
          Object {
            "fields": Array [],
            "name": "field1",
          },
        ],
        "name": "model1",
      },
      Object {
        "fields": Array [
          Object {
            "fields": Array [],
            "name": "field2",
          },
        ],
        "name": "model2",
      },
    ],
    "name": "node",
  },
]
`;

exports[`info simple query 1`] = `
Array [
  Object {
    "fields": Array [],
    "name": "test",
    "type": "String",
  },
]
`;
